fix overflow div

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -12,6 +12,11 @@ body {
   .uppercase { 
     text-transform: uppercase; 
   }
+
+  .activity .card-body p div {
+    display: inline-block;
+    margin-left: 5px;
+  }
   
   .no-select {
     -webkit-touch-callout: none;
